(fix) add space for some images on small devices

--- a/src/assets/scss/_figures.scss
+++ b/src/assets/scss/_figures.scss
@@ -58,3 +58,10 @@ $margin: $font-size * 4;
     text-align: center;
     color: #212121;
 }
+
+@media (max-width: 600px) {
+	.figure__my-small {
+		margin-bottom: $margin;
+		margin-top: $margin;
+	}
+}
